# xpath-detector

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
docs/plans/: 2026-05-12-xpath-detector-implementation.md  2026-05-12-xpath-detector-redesign.md  2026-05-12-xpath-detector-v1.1-design.md  2026-05-12-xpath-detector-v1.1-implementation.md  2026-05-12-xpath-detector-v1.2-design.md  2026-05-12-xpath-detector-v1.2-implementation.md  2026-05-12-xpath-detector-v1.3-design.md  2026-05-12-xpath-detector-v1.3-implementation.md
scripts/: migrate_v1.py
src/xpath_detector/: __init__.py  __main__.py  analyzer.py  browser.py  models.py  overlay.py  session.py  shell.py
src/xpath_detector/browser/: __init__.py  base.py  playwright_backend.py  selenium_backend.py
src/xpath_detector/exporters/: __init__.py  _naming.py  base.py  html_exp.py  java_exp.py  json_exp.py  python_exp.py  robot_exp.py
tests/: test_analyzer.py  test_browser.py  test_browser_base.py  test_browser_factory.py  test_exporters.py  test_exporters_naming.py  test_migrate_v1.py  test_models.py  test_overlay.py  test_playwright_backend.py  test_selenium_backend.py  test_session.py  test_shell.py  test_shell_parser.py
tests/fixtures/: session_v1.json
